kubernetes/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candlestick-frontend-app-deploy
  labels:
    name: candlestick-frontend-app-deploy
    app: candlestick-frontend-app
  namespace: _{_NAMESPACE_}_
spec:
  replicas: _{_REPLICAS_}_
  selector:
    matchLabels:
      name: candlestick-frontend-app-pod
      app: candlestick-frontend-app

  template:
    metadata:
      name: candlestick-frontend-app-pod
      labels:
        name: candlestick-frontend-app-pod
        app: candlestick-frontend-app
    spec:
      containers:
        - name: candlestick-frontend-app
          imagePullPolicy: Always
          image: _{_IMAGE_}_
          ports:
            - containerPort: 3000
              name: http
