kubernetes/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: candlestick-frontend-service
  labels:
    name: candlestick-frontend-service
    app: candlestick-frontend-app
  namespace: _{_NAMESPACE_}_
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30005
      protocol: TCP
  selector:
    name: candlestick-frontend-app-pod
    app: candlestick-frontend-app
