kubernetes/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: candlestick-ingress
  labels:
    name: candlestick-ingress
  namespace: _{_NAMESPACE_}_
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: candlestick-app-_{_NAMESPACE_}_.myapp.ito
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: candlestick-frontend-service
            port:
              number: 80
